Remove logging tool on dev fullscreen

--- a/src/scaffolding/Development.css
+++ b/src/scaffolding/Development.css
@@ -32,6 +32,7 @@ body.natural .development #engine-container {
   color: blue;
 }
 
-body.scaled .development .sidebar {
+body.scaled .development .sidebar,
+body.scaled .development .Logging {
   display: none;
 }
