--- a/src/scaffolding/Replay.css
+++ b/src/scaffolding/Replay.css
@@ -14,6 +14,10 @@
   font-family: Apple Color Emoji;
 }
 
+.Replay .timeSight .repeat {
+  visibility: hidden;
+}
+
 .Replay .repeat-off.button {
   opacity: 0.5;
 }
