Move delete button into edit replay UI

--- a/src/scaffolding/Replay.css
+++ b/src/scaffolding/Replay.css
@@ -69,8 +69,7 @@
 }
 
 .Replay .replays .replay .drag,
-.Replay .replays .replay .edit,
-.Replay .replays .replay .delete {
+.Replay .replays .replay .edit {
   visibility: hidden;
 }
 
@@ -87,17 +86,14 @@
 }
 
 .Replay .replays .replay:hover .drag,
-.Replay .replays .replay:hover .edit,
-.Replay .replays .replay:hover .delete {
+.Replay .replays .replay:hover .edit {
   visibility: visible;
 }
 
 .Replay .replays .replay.editing .drag,
 .Replay .replays .replay.active .drag,
 .Replay .replays .replay.editing .edit,
-.Replay .replays .replay.active .edit,
-.Replay .replays .replay.editing .delete,
-.Replay .replays .replay.active .delete {
+.Replay .replays .replay.active .edit {
   visibility: hidden !important;
 }
 
