Improve replay editing

--- a/src/scaffolding/Replay.css
+++ b/src/scaffolding/Replay.css
@@ -90,6 +90,7 @@
   visibility: visible;
 }
 
+.Replay .replays .replay.editing .play,
 .Replay .replays .replay.editing .drag,
 .Replay .replays .replay.active .drag,
 .Replay .replays .replay.editing .edit,
