--- a/src/scaffolding/Replay.css
+++ b/src/scaffolding/Replay.css
@@ -84,7 +84,7 @@
   letter-spacing: -3px;
   cursor: move;
   font-weight: bold;
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 
 .Replay .replays .replay.editing .name {
