--- a/src/scaffolding/Engine.css
+++ b/src/scaffolding/Engine.css
@@ -30,8 +30,19 @@ body.natural #engine-container canvas {
   margin-right: auto;
 }
 
-.production #engine-container {
+#engine-container {
   position: relative;
+}
+
+#engine-container canvas {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+}
+
+#engine-container canvas#illuminated {
+  z-index: -1;
 }
 
 #engine-container.activate {
